Tests finished, docs updated, minor changes
